# Octave-Radix-2-FFT

./: .gitignore  CMakeLists.txt  README.md  build.gradle  buildDebug.bat  logcat.bat  testFFT.m
app/: CMakeLists.txt  build.gradle  compileTest.bat
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: fft.comp.spv
app/src/main/cpp/: CMakeLists.txt  android_helper.cpp  android_helpers.h  main.cpp  pc_helpers.h  vulkanFFTNative.cpp  vulkanFFTNative.h  vulkanHelpers.h
app/src/main/cpp/shaders/: fft.comp
app/src/main/java/timo/home/vulkanFFT/: VulkanFFT.java
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
functions/: naive_fft.m  radix2fft.m
shader/: CMakeLists.txt  fft.comp
src/: CMakeLists.txt  main.cpp
